Update and rename hello.html to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="hello.css">
+    <link rel="stylesheet" href="index.css">
     <title>Pokemon</title>
 </head>
 <body>
@@ -14,6 +14,6 @@
     <div id="not-found"></div>
     <img id="pokemon-image">
     <div id="pokemon-type"></div>
-    <script src="hello.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
